--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(76414066-5689-4604-a8e5-52890659e161.svg);
+  background-image: url(logo.svg);
   background-size: cover;
   color: white;
   text-align: center;
